--- a/style.css
+++ b/style.css
@@ -7,32 +7,71 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  background-color: purple;
+}
 .navbar {
-  background-color: red;
   display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 5rem;
+  align-items: center;
 }
 ul {
   display: flex;
-  justify-content: space-evenly;
 }
 li {
   list-style: none;
 }
-.navlink {
+li > a {
   text-decoration: none;
   color: white;
-  font-size: 2em;
+  font-size: 1.5em;
+  padding: 10px;
 }
-header {
-  background-color: orange;
+.navlink:hover {
+  background-color: black;
 }
-
+.logo {
+  color: red;
+}
+.intro {
+  /* background-color: blue; */
+  display: flex;
+  height: 15em;
+  align-items: center;
+}
+.intro > h2 {
+  font-size: 4rem;
+  color: rgb(142, 189, 142);
+}
+.intro > p {
+  /* background-color: red; */
+}
+h3 {
+  background-color: white;
+  font-size: 1.5rem;
+  padding: 2%;
+  text-align: center;
+}
+.project {
+  /* add opacity on hover, pseudoelements for hover effect */
+  margin: 5%;
+}
 .project-container {
-  background-color: yellow;
+  display: flex;
+  flex-direction: row;
+  /* background-color: red; */
 }
+/* change to display grid, set up 6 x 4 grid, 6 projects, sections to explain  a little */
 #contact {
-  background-color: green;
+  /* background-color: green; */
 }
 footer {
-  background-color: purple;
+  /* background-color: purple; */
+  border-top: 10px solid gold;
+
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
